# Computer-Vision

Binary_Vision/: CMakeLists.txt  main.cpp
Convolution/: CMakeLists.txt  main.cpp
Lek8_Feature/: CMakeLists.txt  main.cpp
Lek9_objectReg/: CMakeLists.txt  main.cpp
Lektion1/: CMakeLists.txt  main.cpp
Lektion10_fourier/: CMakeLists.txt  main.cpp
Lektion3/: CMakeLists.txt  main.cpp
Lektion5_Geometric/: CMakeLists.txt  main.cpp
